# prediction-market-arb-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  plan.md  pyproject.toml
mappings/: candidate_pairs.json  manual_mappings.json
rust_arb/: Cargo.toml
rust_arb/src/: alerting.rs  config.rs  db.rs  detector.rs  executor.rs  health.rs  main.rs  models.rs  persistence.rs  polymarket_signer.rs  registry.rs  risk.rs
rust_arb/src/adapters/: kalshi.rs  polymarket.rs
scripts/: discover_markets.py  match_candidates.py
src/: config.py  db.py  detector.py  executor.py  main.py  models.py  risk.py  utils.py
src/adapters/: base.py  kalshi.py  polymarket.py
src/matcher/: manual.py  normalizer.py  registry.py
