[package]
name = "arb_monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arb_monitor"
path = "src/main.rs"

[[bin]]
name = "discover_pairs"
path = "src/bin/discover_pairs.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
config = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rsa = "0.9"
base64 = "0.22"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2"
anyhow = "1"
thiserror = "2"
serde_yaml = "0.9"
async-trait = "0.1"
